src/test/ui/const-generics/issues/issue-62878.full.stderr
error[E0770]: the type of const parameters must not depend on other generic parameters
  --> $DIR/issue-62878.rs:5:38
   |
LL | fn foo<const N: usize, const A: [u8; N]>() {}
   |                                      ^ the type must not depend on the parameter `N`

error: constant expression depends on a generic parameter
  --> $DIR/issue-62878.rs:10:14
   |
LL |     foo::<_, {[1]}>();
   |              ^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error[E0308]: mismatched types
  --> $DIR/issue-62878.rs:10:15
   |
LL |     foo::<_, {[1]}>();
   |               ^^^ expected `usize`, found array `[{integer}; 1]`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0308, E0770.
For more information about an error, try `rustc --explain E0308`.
